--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "universal-storage",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
-  "main": "index",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
